# 7410-10

./: 7410-10.overlay  CMakeLists.txt  README.rst  nrf52840dk_nrf52840.overlay  prj.conf
BMP585-I2C-SPI_v1.0.0-beta/zephyr/drivers/sensor/bmp585/: CMakeLists.txt  bmp585.c  bmp585.h  bmp585_i2c.c  bmp585_spi.c
BMP585-I2C-SPI_v1.0.0-beta/zephyr/dts/bindings/sensor/: bosch,bmp585-i2c.yaml
BMP585-I2C-SPI_v1.0.0-beta/zephyr/samples/sensor/bmp585/: README.rst  app.overlay
bmp585/zephyr/: CMakeLists.txt  Kconfig  module.yml
bmp585/zephyr/drivers/sensor/: CMakeLists.txt  Kconfig
bmp585/zephyr/drivers/sensor/bmp585/: Kconfig  bmp585_trigger.c
bmp585/zephyr/dts/bindings/sensor/: bosch,bmp585-spi.yaml  bosch,bmp585.yaml
bmp585/zephyr/include/zephyr/drivers/: sensor.h
bmp585/zephyr/samples/sensor/bmp585/: CMakeLists.txt  prj.conf  sample.yaml
bmp585/zephyr/samples/sensor/bmp585/src/: main.c
boards/InstantCare/PCB7410_10_006/: Kconfig.PCB7410_10_006  PCB7410_10_006-pinctrl.dtsi  PCB7410_10_006.dts  PCB7410_10_006.yml  PCB7410_10_006_defconfig  board.yml
src/: ble_manager.c  ble_manager.h  main.c
